--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-*.xml
 *.pyc
 tools/*.pyc
 *.esriaddin
+EnProTo.AddDescriptionToFeatures.pyt.xml
+EnProTo.KartenserieToPng.pyt.xml
+EnProTo.OpenPathForSelectedLayer.pyt.xml
+EnProTo.PlankopfWizard.pyt.xml
+EnProTo.pyt.xml
